include/tbmp_rotate.h

/* Filter quality for rotation. */
typedef enum TBmpRotateFilter {
    TBMP_ROTATE_NEAREST = 0,  /* nearest-neighbour, fastest       */
    TBMP_ROTATE_BILINEAR = 1, /* bilinear interpolation, smoother */
} TBmpRotateFilter;
/*
 * tbmp_rotate90  - lossless 90-degree clockwise rotation.
 * tbmp_rotate180 - lossless 180-degree rotation.
 * tbmp_rotate270 - lossless 270-degree clockwise rotation.
 *
 * src : pointer to input TBmpFrame (const, non-NULL).
 * dst : pointer to output TBmpFrame (non-NULL, must have valid pixel buffer).
 *
 * These avoid floating-point entirely and use exact pixel mappings.
 * Output dimensions: 90/270 swap width/height; 180 keeps them equal.
 *
 * Returns TBMP_OK on success, negative TBmpError on failure.
 *
 * Thread safety: These functions are thread-safe as long as each thread uses separate src and dst instances.
 * Ownership: The caller retains ownership of all buffers and structs.
 */
TBmpError tbmp_rotate90(const TBmpFrame *src, TBmpFrame *dst);
TBmpError tbmp_rotate180(const TBmpFrame *src, TBmpFrame *dst);
TBmpError tbmp_rotate270(const TBmpFrame *src, TBmpFrame *dst);
/*
 * tbmp_rotate_output_dims - compute output dimensions for a given rotation.
 *
 * src_w, src_h : source image dimensions.
 * angle_rad    : rotation angle in radians (counter-clockwise).
 * out_w, out_h : receives the output dimensions (non-NULL).
 *
 * Not available when TBMP_NO_FLOAT is defined.
 *
 * Thread safety: This function is thread-safe.
 */
void tbmp_rotate_output_dims(uint16_t src_w, uint16_t src_h, double angle_rad,
                             uint16_t *out_w, uint16_t *out_h);
/*
 * tbmp_rotate - rotate a TBmpFrame by angle_rad radians (counter-clockwise).
 *
 * src       : pointer to input TBmpFrame (const, non-NULL, must be fully decoded).
 * dst       : pointer to output TBmpFrame (non-NULL, must have pixel buffer of at least out_w * out_h TBmpRGBA elements).
 *             Use tbmp_rotate_output_dims to determine the required size.
 *             dst->width and dst->height are set by this function.
 * angle_rad : rotation angle in radians (counter-clockwise positive).
 * bg        : background colour to fill unmapped pixels.
 * filter    : interpolation quality.
 *
 * Returns TBMP_OK on success, negative TBmpError on failure.
 *
 * Not available when TBMP_NO_FLOAT is defined.
 *
 * Thread safety: This function is thread-safe as long as each thread uses separate src and dst instances.
 * Ownership: The caller retains ownership of all buffers and structs.
 */
TBmpError tbmp_rotate(const TBmpFrame *src, TBmpFrame *dst, double angle_rad,
                      TBmpRGBA bg, TBmpRotateFilter filter);
static inline void tbmp_rotate_output_dims(uint16_t src_w, uint16_t src_h,
                                           double angle_rad, uint16_t *out_w,
                                           uint16_t *out_h) {
    int q = tbmp_no_float_quadrant(angle_rad);
    if (out_w)
        *out_w = (q & 1) ? src_h : src_w;
    if (out_h)
        *out_h = (q & 1) ? src_w : src_h;
}
static inline TBmpError tbmp_rotate(const TBmpFrame *src, TBmpFrame *dst,
                                    double angle_rad, TBmpRGBA bg,
                                    TBmpRotateFilter filter) {
    (void)bg;
    (void)filter;

    if (src == NULL || dst == NULL)
        return TBMP_ERR_NULL_PTR;
    if (src->pixels == NULL || dst->pixels == NULL)
        return TBMP_ERR_NULL_PTR;
    if (src->width == 0 || src->height == 0)
        return TBMP_ERR_ZERO_DIMENSIONS;

    switch (tbmp_no_float_quadrant(angle_rad)) {
    case 1:
        return tbmp_rotate90(src, dst);
    case 2:
        return tbmp_rotate180(src, dst);
    case 3:
        return tbmp_rotate270(src, dst);
    default: {
        uint32_t n = (uint32_t)src->width * (uint32_t)src->height;
        dst->width = src->width;
        dst->height = src->height;
        for (uint32_t i = 0; i < n; i++)
            dst->pixels[i] = src->pixels[i];
        return TBMP_OK;
    }
    }
}