rust/bindings/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpMeta"][::std::mem::size_of::<TBmpMeta>() - 5584usize];
    ["Alignment of TBmpMeta"][::std::mem::align_of::<TBmpMeta>() - 4usize];
    ["Offset of field: TBmpMeta::title"][::std::mem::offset_of!(TBmpMeta, title) - 0usize];
    ["Offset of field: TBmpMeta::author"][::std::mem::offset_of!(TBmpMeta, author) - 128usize];
    ["Offset of field: TBmpMeta::description"]
        [::std::mem::offset_of!(TBmpMeta, description) - 256usize];
    ["Offset of field: TBmpMeta::created"][::std::mem::offset_of!(TBmpMeta, created) - 384usize];
    ["Offset of field: TBmpMeta::software"][::std::mem::offset_of!(TBmpMeta, software) - 512usize];
    ["Offset of field: TBmpMeta::license"][::std::mem::offset_of!(TBmpMeta, license) - 640usize];
    ["Offset of field: TBmpMeta::has_dpi"][::std::mem::offset_of!(TBmpMeta, has_dpi) - 768usize];
    ["Offset of field: TBmpMeta::dpi"][::std::mem::offset_of!(TBmpMeta, dpi) - 772usize];
    ["Offset of field: TBmpMeta::colorspace"]
        [::std::mem::offset_of!(TBmpMeta, colorspace) - 776usize];
    ["Offset of field: TBmpMeta::tag_count"]
        [::std::mem::offset_of!(TBmpMeta, tag_count) - 904usize];
    ["Offset of field: TBmpMeta::tags"][::std::mem::offset_of!(TBmpMeta, tags) - 908usize];
    ["Offset of field: TBmpMeta::custom_count"]
        [::std::mem::offset_of!(TBmpMeta, custom_count) - 1420usize];
    ["Offset of field: TBmpMeta::custom"][::std::mem::offset_of!(TBmpMeta, custom) - 1424usize];
};
unsafe extern "C" {
    pub fn tbmp_open(buf: *const u8, buf_len: usize, out: *mut TBmpImage) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_validate_head(head: *const TBmpHead) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_error_str(err: TBmpError) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn tbmp_pixel_to_rgba(
        pixel_val: u32,
        fmt: TBmpPixelFormat,
        pal: *const TBmpPalette,
        masks: *const TBmpMasks,
    ) -> TBmpRGBA;
}
unsafe extern "C" {
    pub fn tbmp_palette_lookup(pal: *const TBmpPalette, idx: u32) -> TBmpRGBA;
}
unsafe extern "C" {
    pub fn tbmp_scale_channel(val: u32, bits: u32) -> u8;
}
unsafe extern "C" {
    pub fn tbmp_dither_to_palette(frame: *mut TBmpFrame, pal: *const TBmpPalette) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_decode(img: *const TBmpImage, frame: *mut TBmpFrame) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_meta_parse(
        blob: *const u8,
        len: usize,
        out: *mut TBmpMeta,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tbmp_meta_encode(
        meta: *const TBmpMeta,
        out: *mut u8,
        out_cap: usize,
        out_len: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tbmp_meta_validate_structured_blob(blob: *const u8, len: usize)
        -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TBmpWriteParams {
    pub encoding: TBmpEncoding,
    pub pixel_format: TBmpPixelFormat,
    pub bit_depth: u8,
    pub palette: *const TBmpPalette,
    pub masks: *const TBmpMasks,
    pub meta: *const TBmpMeta,
    pub version: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TBmpWriteParams"][::std::mem::size_of::<TBmpWriteParams>() - 48usize];
    ["Alignment of TBmpWriteParams"][::std::mem::align_of::<TBmpWriteParams>() - 8usize];
    ["Offset of field: TBmpWriteParams::encoding"]
        [::std::mem::offset_of!(TBmpWriteParams, encoding) - 0usize];
    ["Offset of field: TBmpWriteParams::pixel_format"]
        [::std::mem::offset_of!(TBmpWriteParams, pixel_format) - 4usize];
    ["Offset of field: TBmpWriteParams::bit_depth"]
        [::std::mem::offset_of!(TBmpWriteParams, bit_depth) - 8usize];
    ["Offset of field: TBmpWriteParams::palette"]
        [::std::mem::offset_of!(TBmpWriteParams, palette) - 16usize];
    ["Offset of field: TBmpWriteParams::masks"]
        [::std::mem::offset_of!(TBmpWriteParams, masks) - 24usize];
    ["Offset of field: TBmpWriteParams::meta"]
        [::std::mem::offset_of!(TBmpWriteParams, meta) - 32usize];
    ["Offset of field: TBmpWriteParams::version"]
        [::std::mem::offset_of!(TBmpWriteParams, version) - 40usize];
};
unsafe extern "C" {
    pub fn tbmp_write_default_params(p: *mut TBmpWriteParams);
}
unsafe extern "C" {
    pub fn tbmp_write_needed_size(frame: *const TBmpFrame, params: *const TBmpWriteParams)
        -> usize;
}
unsafe extern "C" {
    pub fn tbmp_write(
        frame: *const TBmpFrame,
        params: *const TBmpWriteParams,
        out: *mut u8,
        out_cap: usize,
        out_len: *mut usize,
    ) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_pick_best_encoding(
        frame: *const TBmpFrame,
        params: *const TBmpWriteParams,
    ) -> TBmpEncoding;
}
unsafe extern "C" {
    pub fn tbmp_auto_palette_from_frame(
        frame: *const TBmpFrame,
        max_colors: u32,
        out: *mut TBmpPalette,
    ) -> TBmpError;
}
pub const TBMP_ROTATE_FILTER_TBMP_ROTATE_NEAREST: TBmpRotateFilter = 0;
pub const TBMP_ROTATE_FILTER_TBMP_ROTATE_BILINEAR: TBmpRotateFilter = 1;
pub type TBmpRotateFilter = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn tbmp_rotate90(src: *const TBmpFrame, dst: *mut TBmpFrame) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_rotate180(src: *const TBmpFrame, dst: *mut TBmpFrame) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_rotate270(src: *const TBmpFrame, dst: *mut TBmpFrame) -> TBmpError;
}
unsafe extern "C" {
    pub fn tbmp_rotate_output_dims(
        src_w: u16,
        src_h: u16,
        angle_rad: f64,
        out_w: *mut u16,
        out_h: *mut u16,
    );
}
unsafe extern "C" {
    pub fn tbmp_rotate(
        src: *const TBmpFrame,
        dst: *mut TBmpFrame,
        angle_rad: f64,
        bg: TBmpRGBA,
        filter: TBmpRotateFilter,
    ) -> TBmpError;
}
